Fix tabs background being cut off

--- a/style/global.css
+++ b/style/global.css
@@ -260,11 +260,14 @@ a {
   color:#868686 !important;
 }
 
+.tabs {
+  background: var(--grey-900);
+}
+
 .tabs-container {
   display: flex;
   width: 100%;
   height: 40px;
-  background: var(--grey-900);
 }
 .tabs-tab-container {
   display: flex;
